syntax = "proto3";
package junction.junction;

option go_package = "github.com/airchains-network/junction/x/junction/types";

message VrfDisputeResult {
  
  repeated bool votes = 1; 
  repeated string addressList = 2; 
  uint64 consentVote = 3; 
  uint64 dissentVote = 4; 
  float agreementPercentage = 5; 
  bool result = 6; 
  string message = 7; 
}
